users and characters read from a file